Working on cable list tool

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -43,7 +43,7 @@ set (SOURCES_FILES
           #src/mdtClVehicleTypeEditor.cpp
           #src/mdtClConnectorEditor.cpp
           src/mdtClConnectionData.cpp
-          src/mdtClArticleConnectionData.cpp
+#          src/mdtClArticleConnectionData.cpp
           #src/mdtClArticleEditor.cpp
           #src/mdtClArticleConnectionDialog.cpp
 #           src/mdtClUnit.cpp
