Working on cable list tool

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -53,7 +53,7 @@ set (SOURCES_FILES
 #           src/mdtClUnitConnectionDialog.cpp
 #           src/mdtClUnitConnectionSelectionDialog.cpp
 #           src/mdtClUnitLinkDialog.cpp
-          src/mdtClLinkData.cpp
+#          src/mdtClLinkData.cpp
           src/mdtClTerminalBlockEditor.cpp
           src/mdtClTerminalEditorDialog.cpp
 #           src/mdtClUnitVehicleType.cpp
