Working on cable list tool

--- a/src/mdttools/mdttesttool/mdtcablelist/CMakeLists.txt
+++ b/src/mdttools/mdttesttool/mdtcablelist/CMakeLists.txt
@@ -43,6 +43,8 @@ set (SOURCES_FILES
           mdtClUnitConnectionDialog.cpp
           mdtClUnitEditor.cpp
           mdtClLinkData.cpp
+          mdtClVehicleTypeLinkData.cpp
+          mdtClLink.cpp
           mdtClUnitLinkDialog.cpp
           mdtClUnitVehicleType.cpp
           # NOTE: provisoire !!!!!!!!!!!!!!!!!!!!
