Updated mdtSqlSelectionDialog + updated cable list tool
Now, mdtSqlSelectionDialog no longer accept to set a model,
 but needs a SQL statement.
Internally, a mdtSortFilterProxyModel is used, so sorting (based on natural sort for strings) is available.

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -26,6 +26,7 @@ set (SOURCES_FILES
 # Qt ui files
 set (FORM_FILES
 	  mdtSqlWindow.ui
+	  mdtSqlSelectionDialog.ui
     )
 
 # Liste des fichiers rcc (ressources)
