Working on test tool and cable list test
By working on test tool, a modification was needed by mdtTestToolTest,
 so that cable list's test scenario can be reused.
 For this, mdtCableListTestScenario was created.

--- a/src/mdttools/mdttesttool/CMakeLists.txt
+++ b/src/mdttools/mdttesttool/CMakeLists.txt
@@ -7,18 +7,23 @@ project (multidiagtools)
 
 # Liste des fichiers d'entêtes Qt (entêtes contenant Q_OBJECT)
 set (HEADER_FILES 
-          
+          mdtTtTestConnectionCableEditor.h
     )
 
 # Liste des fichiers sources
 set (SOURCES_FILES 
           mdtTtBase.cpp
           mdtTtDatabaseSchema.cpp
+          mdtTtTestLinkData.cpp
+          mdtTtTestConnectionCable.cpp
+          mdtTtTestConnectionCableEditor.cpp
+          mdtTtTestNode.cpp
+          mdtTtTestNodeUnitData.cpp
     )
 
 # Liste des fichiers ui
 set (FORM_FILES
-          
+          mdtTtTestConnectionCableEditor.ui
     )
 
 # Liste des fichiers rcc (ressources)
