--- a/tests/mdttools/mdttesttool/CMakeLists.txt
+++ b/tests/mdttools/mdttesttool/CMakeLists.txt
@@ -14,7 +14,7 @@ target_link_libraries(mdttesttooltest "mdtutils${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdttesttooltest "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdttesttooltest "mdtdatabase${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdttesttooltest "mdttesttool${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdttesttooltest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
+#target_link_libraries(mdttesttooltest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
 
 # * mdtCableListTest executable *
 QT4_WRAP_CPP(MDT_CABLE_LIST_MOC "mdtCableListTest.h")
@@ -25,4 +25,4 @@ target_link_libraries(mdtcablelisttest "mdtutils${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtcablelisttest "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtcablelisttest "mdtdatabase${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtcablelisttest "mdttesttool${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdtcablelisttest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
+#target_link_libraries(mdtcablelisttest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
