--- a/tools/mdtcablelist/tests/CMakeLists.txt
+++ b/tools/mdtcablelist/tests/CMakeLists.txt
@@ -119,7 +119,7 @@ target_link_libraries(mdtclsandbox "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtclsandbox "mdtdatabase${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtclsandbox "mdtdevice${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtclsandbox "mdttesttool${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdtclsandbox "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
+#target_link_libraries(mdtclsandbox "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
 #target_link_libraries(mdtclsandbox "mdtdport${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtclsandbox "mdttest")
 
@@ -131,6 +131,6 @@ target_link_libraries(mdtclunittest "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtclunittest "mdtdatabase${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtclunittest "mdtdevice${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtclunittest "mdttesttool${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdtclunittest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
+#target_link_libraries(mdtclunittest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
 #target_link_libraries(mdtclunittest "mdtdport${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtclunittest "mdttest")
