Woeking on database module - Added new class to handle selection in tables

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -23,6 +23,9 @@ set (SOURCES_FILES
           mdtSqlRecord.cpp
           mdtSqlSelectionDialog.cpp
           mdtSqlTableWidget.cpp
+          mdtSqlTableSelectionItem.cpp
+          mdtSqlTableSelectionRow.cpp
+          mdtSqlTableSelection.cpp
     )
 
 # Qt ui files
