Working on test tool

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -30,7 +30,7 @@ set (SOURCES_FILES
           src/mdtTtTest.cpp
           src/mdtTtCableChecker.cpp
           src/mdtTtCableCheckerWindow.cpp
-          src/mdtTtTestNodeUnitSetupData.cpp
+          #src/mdtTtTestNodeUnitSetupData.cpp
           src/mdtTtTestNodeUnitEditor.cpp
     )
 
