--- a/tools/mdtcablelist/tests/CMakeLists.txt
+++ b/tools/mdtcablelist/tests/CMakeLists.txt
@@ -33,7 +33,7 @@ set (TEST_HEADER_FILES
           #../src/mdtTtTestModelItemEditor.h
           ../src/mdtTtCableChecker.h
           ../src/mdtTtCableCheckerWindow.h
-          ../src/mdtTtTestNodeUnitEditor.h
+          #../src/mdtTtTestNodeUnitEditor.h
    )
 
 # Source files
@@ -42,7 +42,7 @@ set (TEST_SOURCES_FILES
           #../src/mdtClEditor.cpp
           #../src/mdtClVehicleTypeEditor.cpp
           #../src/mdtClConnectorEditor.cpp
-          ../src/mdtClConnectionData.cpp
+          #../src/mdtClConnectionData.cpp
 #          ../src/mdtClArticleConnectionData.cpp
           #../src/mdtClArticleEditor.cpp
           #../src/mdtClArticleConnectionDialog.cpp
@@ -74,12 +74,12 @@ set (TEST_SOURCES_FILES
           #../src/mdtTtTestModel.cpp
           #../src/mdtTtTestModelItemEditor.cpp
           #../src/mdtTtTestModelItem.cpp
-          ../src/mdtTtTest.cpp
+          #../src/mdtTtTest.cpp
           ../src/mdtTtCableChecker.cpp
           ../src/mdtTtCableCheckerWindow.cpp
           #../src/mdtTtTestNodeUnitSetupData.cpp
           #../src/mdtTtTestNodeUnitData.cpp
-          ../src/mdtTtTestNodeUnitEditor.cpp
+          #../src/mdtTtTestNodeUnitEditor.cpp
     )
 
 # Qt ui files
@@ -104,7 +104,7 @@ set (TEST_FORM_FILES
           #../src/mdtCcTestConnectionCableEditor.ui
           ../src/mdtTtCableChecker.ui
           ../src/mdtTtCableCheckerWindow.ui
-          ../src/mdtTtTestNodeUnitEditor.ui
+          #../src/mdtTtTestNodeUnitEditor.ui
     )
 
 # Access to project's include files
