--- a/tests/mdttools/mdttesttool/CMakeLists.txt
+++ b/tests/mdttools/mdttesttool/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(mdttesttooltest ${QT_LIBRARIES})
 target_link_libraries(mdttesttooltest "mdttest")
 target_link_libraries(mdttesttooltest "mdtutils${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdttesttooltest "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
+#target_link_libraries(mdttesttooltest "mdtdevice${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdttesttooltest "mdtdatabase${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdttesttooltest "mdttesttool${MDTLIB_VERSION_SUFFIX}")
 #target_link_libraries(mdttesttooltest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
